- Fixed answer align to left

--- a/puzzlemania-template/public/assets/css/riddles.css
+++ b/puzzlemania-template/public/assets/css/riddles.css
@@ -19,7 +19,7 @@
 }
 
 .riddles-list-item > p {
-    text-align: center;
+    text-align: left;
     margin: 0;
 }
 
